--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -3,8 +3,8 @@ title: Contact
 icon: fa-envelope
 order: 4
 ---
-<p>Don't hesitate to contact me! </p>
-
+<p>Don't hesitate to share your thoughts via email or phone! </p>
+<p> +46102525226 <p>
 <form method="post" action="https://formspree.io/{{ site.email }}">
   <div class="row">
     <div class="6u 12u$(mobile)"><label>Name<input type="text" name="name" /></label></div>
