--- a/_sections/photo.html
+++ b/_sections/photo.html
@@ -1,7 +1,7 @@
 ---
 title: Photo
-cover-photo: assets/images/banner.jpg
-cover-photo-alt: "Cover photo: Dome of Light art installation, Kaohsiung, Taiwan"
+cover-photo: assets/images/Banner.webm
+cover-photo-alt: "LFProductions logotype"
 auto-header: none
 icon: fa-camera
 order: 1
