banner mp4 photo

--- a/_sections/photo.html
+++ b/_sections/photo.html
@@ -1,6 +1,6 @@
 ---
 title: Photo
-cover-photo: assets/images/Banner.webm
+cover-photo: assets/images/Banner.mp4
 cover-photo-alt: "LFProductions logotype"
 auto-header: none
 icon: fa-camera
