--- a/_sections/photo.html
+++ b/_sections/photo.html
@@ -1,6 +1,6 @@
 ---
 title: Photo
-cover-photo: https://imgur.com/a/5bJAo
+cover-photo: https://imgur.com/qnhj6VQ
 cover-photo-alt: "LFProductions logotype"
 auto-header: none
 icon: fa-camera
