photo banner jpg

--- a/_sections/photo.html
+++ b/_sections/photo.html
@@ -1,7 +1,7 @@
 ---
 title: Photo
-cover-photo: https://imgur.com/qnhj6VQ.mp4
-cover-photo-alt: "LFProductions logotype"
+cover-photo: assets/images/Banner.jpg
+cover-photo-alt: ""
 auto-header: none
 icon: fa-camera
 order: 1
